--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button id="Ligada">Ligar</button>
             <button id="Desligar">Desligar</button>
         </div>
-        <script src="script.js"></script>
+        <script src="script/script.js"></script>
 </body>
 
 </html>
