--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
 </head>
 
 <body>
-    <header>
-        <h2>Acenda e apague a Lâmpada clicando nos botões abaixo</h2>
-    </header>
+    <div class="container">
 
-    <main>
-        <div>
-            <img src="imagens/lampadaApagada.jpg" alt="Lâmpada" id="lampada">
-        </div>
-        <div>
-            <button id="Ligada">Ligar</button>
-            <button id="Desligar">Desligar</button>
-        </div>
-        <script src="script/script.js"></script>
+        <header>
+            <h2>Acenda e apague a Lâmpada clicando nos botões abaixo</h2>
+        </header>
+    
+        
+            <div>
+                <img src="imagens/lampadaApagada.jpg" alt="Lâmpada" id="lampada">
+            </div>
+            <div>
+                <button id="Ligada">Ligar</button>
+                <button id="Desligar">Desligar</button>
+            </div>
+            <script src="script/script.js"></script>
+    </div>
 </body>
 
 </html>
